<resources>
    <string name="app_name">PedometerUIAppSampling</string>
    <string name="distance_unit">KM</string>
    <string name="minutes_unit">MINUTES</string>
    <string name="calories_unit">CALORIES</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_update_goal">Update Goal Steps</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_privacy_security">Privacy &amp; Security</string>
    <string name="text_help_support">Help And Support</string>
    <string name="text_about">About</string>
    <string name="text_set_notifications">Set Notifications</string>
    <string name="text_notifications_on_off">Notification On/Off</string>
    <string name="text_notifications_period">Notification Period</string>
    <string name="text_privacy">Privacy</string>
    <string name="text_security">Security</string>
    <string name="text_language">Language</string>
    <string name="text_current_steps">CurrentSteps</string>
    <string name="text_remain_steps">RemainSteps</string>
    <string name="text_sun">SUN</string>
    <string name="text_mon">MON</string>
    <string name="text_tue">TUE</string>
    <string name="text_wed">WED</string>
    <string name="text_thu">THU</string>
    <string name="text_fri">FRI</string>
    <string name="text_sat">SAT</string>
    <string name="text_today">Today</string>
    <string name="text_bar_chart">BarChart</string>
    <string name="text_goal">goal</string>
    <string name="text_average">Average</string>
    <string name="text_edit_text_fail_validate">please check input text</string>

</resources>