<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_action_bar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bottom_gray_border"
            app:layout_constraintBottom_toTopOf="@+id/layout_wrap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="24sp"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_title"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintBottom_toTopOf="@+id/layout_notifications_on_off"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_set_notifications"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_notifications_on_off"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/bottom_gray_border"
                app:layout_constraintBottom_toTopOf="@+id/layout_notifications_period"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_title"
                app:layout_constraintWidth_percent="0.8">

                <TextView
                    android:id="@+id/tv_notifications_on_off"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_notifications_on_off"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/swi_notifications_on_off"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swi_notifications_on_off"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_notifications_on_off"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.2"
                    app:thumbTint="@drawable/color_switch_thumb_selector"
                    app:trackTint="@drawable/color_switch_track_selector" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_notifications_period"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/bottom_gray_border"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_notifications_on_off"
                app:layout_constraintWidth_percent="0.8">

                <TextView
                    android:id="@+id/tv_notifications_period"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_notifications_period"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/et_notifications_period"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_notifications_period"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_notifications_period"
                    app:layout_constraintStart_toEndOf="@+id/tv_notifications_period"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_notifications_period"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:text="Set"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/et_notifications_period"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.2" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>